# MiniML

./: MiniML.cabal  README.md
app/: Main.hs
examples/: arithmetic.min  fun.min  funapp.min  multiplication.min  plus.min
src/Language/: MiniML.hs
src/Language/MiniML/: Expr.hs  Parser.hs
