cabal-version: 1.12

name:           MiniML
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Rembane/MiniML#readme>
homepage:       https://github.com/Rembane/MiniML#readme
bug-reports:    https://github.com/Rembane/MiniML/issues
author:         Andreas Ekeroot
maintainer:     andeke@gmail.com
copyright:      2019 Andreas Ekeroot
license:        Apache-2.0
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/Rembane/MiniML

library
  exposed-modules:
      Language.MiniML
      Language.MiniML.Expr
      Language.MiniML.Parser
  hs-source-dirs:
      src
  build-depends:
        base >=4.7 && <5
      , deriving-compat == 0.5.6
      , megaparsec == 7.0.5
      , parser-combinators == 1.0.3
      , prettyprinter == 1.2.1
      , recursion-schemes == 5.1.3
      , text == 1.2.3.1
  default-language: Haskell2010

executable MiniML-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Werror -Wall
  build-depends:
      MiniML
    , base >=4.7 && <5
    , bytestring == 0.10.8.2
    , megaparsec
    , prettyprinter
    , text
  default-language: Haskell2010
